# Donatio-Final

./: compose.yml
donatio-chatbot/: Dockerfile  main.py  pyproject.toml  requirements.txt  sql_chatbot.ipynb
donatio-django/: .dockerignore
donatio-django/accounts/: serializers.py
donatio-django/activities/migrations/: 0001_initial.py
donatio-django/core/management/commands/: boom.py
donatio-django/events/: serializers.py
donatio-django/transactions/: serializers.py  views.py
donatio-kpay/: .dockerignore  Dockerfile  __init__.py  kpay_extract_amount.ipynb  kpay_processor.py  main.py  pyproject.toml  requirements.txt  screenshot_kpay.ipynb
