[project]
name = "donatio-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.115.14",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "typing-extensions>=4.14.0",
    "uvicorn>=0.35.0",
]
